--- a/progress.html
+++ b/progress.html
@@ -107,7 +107,7 @@
               Кружки вообще очень стильные!</p>
           </article>
           <article class="comments__user user">
-            <img class="user__avatar" src="./img/Test-work/user-three.jpg" width="50" height="50" alt="Пользователь">
+            <img class="user__avatar" src="./img/user-three.jpg" width="50" height="50" alt="Пользователь">
             <span class="user__name">Светлана</span>
             <p class="user__comment-text">Очень нравится, что в городе развиваются такие проекты. Надеюсь, такие проекты
               скоро будут не только в частных домах, но и в кафе, музеях, театрах.<br>
