--- a/progress.html
+++ b/progress.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/test.css">
+  <link rel="icon" href="favicon.ico" sizes="32x32">
   <title>Заголовок страницы</title>
 </head>
 
@@ -15,7 +16,7 @@
     <header class="page__header header">
       <div class="header__wrapper header-wrapper">
         <a class="header-wrapper__link" href="progress.html"><img class="header-wrapper__logo"
-            src="./img/Test-work/header-logo.svg" width="262" height="47" alt="Логотип компании INTERIOR LOUNGE">
+            src="./img/header-logo.svg" width="262" height="47" alt="Логотип компании INTERIOR LOUNGE">
         </a>
         <nav class="header-wrapper__navigation navigation">
           <ul class="navigation__list">
@@ -47,7 +48,7 @@
         <h1>Дизайн общественных интерьеров</h1>
         <h2>Кейс клубного дома Tomazzi Hall</h2>
         <div class="front-image-wrapper">
-          <img src="./img/Test-work/front-image.jpg" width="1110" height="400" alt="Клубный дом Tomazzi Hall">
+          <img src="./img/front-image.jpg" width="1110" height="400" alt="Клубный дом Tomazzi Hall">
         </div>
         <p>Создать объект, подобного которому в Санкт-Петербурге еще не было, — такую задачу
           поставил перед собой девелопер Interior Lounge, продумывая клубный дом Tomazzi Hall.
@@ -62,16 +63,11 @@
           <li>Необходимо было выдержать дорогой и одновременно элегантный стиль;</li>
           <li>Ключевой элемент дизайна любого общественного пространства — удобство для жителей.</li>
         </ul>
-        <ol>
-          <li>Источники вдохновения планировалось искать в строгой геометрии, модерне и духе «ревущих двадцатых»;</li>
-          <li>Необходимо было выдержать дорогой и одновременно элегантный стиль;</li>
-          <li>Ключевой элемент дизайна любого общественного пространства — удобство для жителей.</li>
-        </ol>
         <div class="ladder-image-wrapper">
-          <img src="./img/Test-work/ladder.jpg" alt="Деревянная винтовая лестница">
+          <img src="./img/ladder.jpg" alt="Деревянная винтовая лестница">
         </div>
         <div class="elevator-image-wrapper">
-          <img src="./img/Test-work/elevator.jpg" alt="Движущийся прозрачный лифт">
+          <img src="./img/elevator.jpg" alt="Движущийся прозрачный лифт">
         </div>
         <h3>Начало работы и источники вдохновения</h3>
         <p>Над экстерьером комплекса работала команда одного из крупнейших архитектурных бюро России — «Студия 11», а мы
@@ -96,12 +92,12 @@
         </form>
         <div class="footer__comments comments">
           <article class="comments__user user">
-            <img class="user__avatar" src="./img/Test-work/user-one.jpg" width="50" height="50" alt="Пользователь">
+            <img class="user__avatar" src="./img/user-one.jpg" width="50" height="50" alt="Пользователь">
             <span class="user__name">Иван Грачев</span>
             <p class="user__comment-text">Очень самобытный и необычный проект. </p>
           </article>
           <article class="comments__user user">
-            <img class="user__avatar" src="./img/Test-work/user-two.jpg" width="50" height="50" alt="Пользователь">
+            <img class="user__avatar" src="./img/user-two.jpg" width="50" height="50" alt="Пользователь">
             <span class="user__name">Мария Рачинская</span>
             <p class="user__comment-text">Мне особенно понравилось решение лестничных клеток.
               Кружки вообще очень стильные!</p>
