--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div class="page__wrapper">
     <header class="page__header header">
       <div class="header__wrapper header-wrapper">
-        <a class="header-wrapper__link" href="progress.html"><img class="header-wrapper__logo"
-            src="./img/header-logo.svg" width="262" height="47" alt="Логотип компании INTERIOR LOUNGE">
+        <a class="header-wrapper__link" href="index.html">
+          <img class="header-wrapper__logo" src="./img/header-logo.svg" width="262" height="47" alt="Логотип компании INTERIOR LOUNGE">
         </a>
         <nav class="header-wrapper__navigation navigation">
           <ul class="navigation__list">
@@ -63,11 +63,9 @@
           <li>Необходимо было выдержать дорогой и одновременно элегантный стиль;</li>
           <li>Ключевой элемент дизайна любого общественного пространства — удобство для жителей.</li>
         </ul>
-        <div class="ladder-image-wrapper">
-          <img src="./img/ladder.jpg" alt="Деревянная винтовая лестница">
-        </div>
-        <div class="elevator-image-wrapper">
-          <img src="./img/elevator.jpg" alt="Движущийся прозрачный лифт">
+        <div class="back-image-wrapper">
+          <img src="./img/ladder.jpg" width="540" height="350" alt="Деревянная винтовая лестница">
+          <img src="./img/elevator.jpg" width="540" height="350" alt="Движущийся прозрачный лифт">
         </div>
         <h3>Начало работы и источники вдохновения</h3>
         <p>Над экстерьером комплекса работала команда одного из крупнейших архитектурных бюро России — «Студия 11», а мы
@@ -92,18 +90,18 @@
         </form>
         <div class="footer__comments comments">
           <article class="comments__user user">
-            <img class="user__avatar" src="./img/user-one.jpg" width="50" height="50" alt="Пользователь">
+            <img class="user__avatar" src="./img/user-one.jpg" width="50" height="50" alt="">
             <span class="user__name">Иван Грачев</span>
             <p class="user__comment-text">Очень самобытный и необычный проект. </p>
           </article>
           <article class="comments__user user">
-            <img class="user__avatar" src="./img/user-two.jpg" width="50" height="50" alt="Пользователь">
+            <img class="user__avatar" src="./img/user-two.jpg" width="50" height="50" alt="">
             <span class="user__name">Мария Рачинская</span>
             <p class="user__comment-text">Мне особенно понравилось решение лестничных клеток.
               Кружки вообще очень стильные!</p>
           </article>
           <article class="comments__user user">
-            <img class="user__avatar" src="./img/user-three.jpg" width="50" height="50" alt="Пользователь">
+            <img class="user__avatar" src="./img/user-three.jpg" width="50" height="50" alt="">
             <span class="user__name">Светлана</span>
             <p class="user__comment-text">Очень нравится, что в городе развиваются такие проекты. Надеюсь, такие проекты
               скоро будут не только в частных домах, но и в кафе, музеях, театрах.<br>
