--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
         <nav class="header-wrapper__navigation navigation">
           <ul class="navigation__list">
             <li class="navigation__item select">
-              <span class="select__title">Наши проекты</span>
-              <button class="select__button" type="button"></button>
+              <button class="select__button" type="button">Наши проекты</button>
               <ul class="select__list hidden">
                 <li class="select__item">
                   <a class="select__link" href="#">Tomazzi Hall</a>
@@ -35,7 +34,9 @@
                 </li>
               </ul>
             </li>
-            <li class="navigation__item">Контакты</li>
+            <li class="navigation__item">
+              <a class="navigation__contacts-link" href="" >Контакты</a>
+            </li>
             <li class="navigation__item navigation-link">
               <a class="navigation__link" href="#">Оставить отзыв</a>
             </li>
