Центровка, липкий футер, мелкие корректировки

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         <h3>Начало работы и источники вдохновения</h3>
         <p>Над экстерьером комплекса работала команда одного из крупнейших архитектурных бюро России — «Студия 11», а мы
           оформили интерьер 10 парадных и 3 лаунж-зон.</p>
-        <span>Заказчик знал команду, следил за нашей деятельностью, поэтому никого больше не рассматривал — поручил
+        <p>Заказчик знал команду, следил за нашей деятельностью, поэтому никого больше не рассматривал — поручил
           дизайн
-          парадных и лаунж-зон нам.</span>
+          парадных и лаунж-зон нам.</p>
         <blockquote>«Нам хотелось поддержать внешнюю архитектурную концепцию, но внутри добавить что-то необычное.
           Сделать
           некое подобие матрешки, чтобы все время открывались новые смыслы и элементы». </blockquote>
@@ -90,24 +90,24 @@
           <span class="form__explanatory-text">Отзыв будет добавлен после проверки модератором</span>
         </form>
         <div class="footer__comments comments">
-          <article class="comments__user user">
-            <img class="user__avatar" src="./img/user-one.jpg" width="50" height="50" alt="">
-            <span class="user__name">Иван Грачев</span>
-            <p class="user__comment-text">Очень самобытный и необычный проект. </p>
-          </article>
-          <article class="comments__user user">
-            <img class="user__avatar" src="./img/user-two.jpg" width="50" height="50" alt="">
-            <span class="user__name">Мария Рачинская</span>
-            <p class="user__comment-text">Мне особенно понравилось решение лестничных клеток.
+          <section class="comments__user">
+            <img class="comments__user-avatar" src="./img/user-one.jpg" width="50" height="50" alt="">
+            <p class="comments__user-name">Иван Грачев</p>
+            <p class="comments__text">Очень самобытный и необычный проект. </p>
+          </section>
+          <section class="comments__user">
+            <img class="comments__user-avatar" src="./img/user-two.jpg" width="50" height="50" alt="">
+            <p class="comments__user-name">Мария Рачинская</p>
+            <p class="comments__text">Мне особенно понравилось решение лестничных клеток.
               Кружки вообще очень стильные!</p>
-          </article>
-          <article class="comments__user user">
-            <img class="user__avatar" src="./img/user-three.jpg" width="50" height="50" alt="">
-            <span class="user__name">Светлана</span>
-            <p class="user__comment-text">Очень нравится, что в городе развиваются такие проекты. Надеюсь, такие проекты
+          </section>
+          <section class="comments__user">
+            <img class="comments__user-avatar" src="./img/user-three.jpg" width="50" height="50" alt="">
+            <p class="comments__user-name">Светлана</p>
+            <p class="comments__text">Очень нравится, что в городе развиваются такие проекты. Надеюсь, такие проекты
               скоро будут не только в частных домах, но и в кафе, музеях, театрах.<br>
               Я бы сходила!</p>
-          </article>
+          </section>
         </div>
       </div>
     </footer>
