--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="order-form__column-item-text">
                   <p>
                     <span class="wpcf7-form-control-wrap">
-                      <textarea class="wpcf7-textarea" cols="40" rows="10"
+                      <textarea class="wpcf7-textarea"
                         placeholder="Расскажите, что вы думаете о проекте" required></textarea>
                     </span>
                   </p>
