--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           <img class="header-wrapper__logo" src="./img/header-logo.svg" width="262" height="47"
             alt="Логотип компании INTERIOR LOUNGE">
         </a>
-        <nav class="header-wrapper__navigation navigation">
-          <div class="menu-navigation-container">
+        <nav>
+          <div class="menu-primary-container">
             <ul class="menu">
               <li class="menu-item menu-item-has-children">
                 <a href="">Наши проекты</a>
@@ -51,9 +51,7 @@
       <div class="wysiwyg__wrapper">
         <h1>Дизайн общественных интерьеров</h1>
         <h2>Кейс клубного дома Tomazzi Hall</h2>
-        <div class="front-image-wrapper">
-          <img src="./img/front-image.jpg" width="1110" height="400" alt="Клубный дом Tomazzi Hall">
-        </div>
+        <img src="./img/front-image.jpg" width="1110" height="400" alt="Клубный дом Tomazzi Hall">
         <p>Создать объект, подобного которому в Санкт-Петербурге еще не было, — такую задачу
           поставил перед собой девелопер Interior Lounge, продумывая клубный дом Tomazzi Hall.
           Над экстерьером комплекса работала команда одного из крупнейших архитектурных
@@ -67,7 +65,7 @@
           <li>Необходимо было выдержать дорогой и одновременно элегантный стиль;</li>
           <li>Ключевой элемент дизайна любого общественного пространства — удобство для жителей.</li>
         </ul>
-        <div class="back-image-wrapper">
+        <div class="wysiwyg__image-wrapper">
           <img src="./img/ladder.jpg" width="540" height="350" alt="Деревянная винтовая лестница">
           <img src="./img/elevator.jpg" width="540" height="350" alt="Движущийся прозрачный лифт">
         </div>
@@ -82,9 +80,9 @@
           некое подобие матрешки, чтобы все время открывались новые смыслы и элементы». </blockquote>
       </div>
     </main>
-    <footer class="page__footer footer">
-      <div class="footer__wrapper">
-        <h3 class="footer__title">Оставить отзыв </h3>
+    <footer class="page__footer">
+      <div class="page__footer-wrapper">
+        <h3 class="page__footer-title">Оставить отзыв </h3>
         <div class="order-form">
           <div class="wpcf7">
             <form class="wpcf7-form" action="" method="post">
